--- a/FunnyBunnyJump/Resources/Particle/snow.plist
+++ b/FunnyBunnyJump/Resources/Particle/snow.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>angle</key>
-	<real>239.17999267578125</real>
+	<integer>240</integer>
 	<key>angleVariance</key>
-	<real>27.120000839233398</real>
+	<integer>27</integer>
 	<key>blendFuncDestination</key>
 	<integer>1</integer>
 	<key>blendFuncSource</key>
@@ -13,9 +13,9 @@
 	<key>duration</key>
 	<real>-1</real>
 	<key>emitterType</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorAlpha</key>
-	<real>0.18999999761581421</real>
+	<real>0.1899999976158142</real>
 	<key>finishColorBlue</key>
 	<real>0.9100000262260437</real>
 	<key>finishColorGreen</key>
@@ -23,61 +23,61 @@
 	<key>finishColorRed</key>
 	<real>0.9100000262260437</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>0.23999999463558197</real>
+	<real>0.239999994635582</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceRed</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishParticleSize</key>
-	<real>20</real>
+	<integer>8</integer>
 	<key>finishParticleSizeVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>gravityx</key>
 	<real>7</real>
 	<key>gravityy</key>
 	<real>-15</real>
 	<key>maxParticles</key>
-	<real>501</real>
+	<integer>800</integer>
 	<key>maxRadius</key>
 	<real>100</real>
 	<key>maxRadiusVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>minRadius</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>particleLifespan</key>
-	<real>3.75</real>
+	<integer>7</integer>
 	<key>particleLifespanVariance</key>
-	<real>8.8816003799438477</real>
+	<integer>0</integer>
 	<key>radialAccelVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>radialAcceleration</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotatePerSecond</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotatePerSecondVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotationEnd</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotationEndVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotationStart</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotationStartVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>sourcePositionVariancex</key>
 	<real>557</real>
 	<key>sourcePositionVariancey</key>
-	<real>-64</real>
+	<integer>0</integer>
 	<key>sourcePositionx</key>
 	<real>413</real>
 	<key>sourcePositiony</key>
-	<real>832</real>
+	<integer>320</integer>
 	<key>speed</key>
-	<real>19.993831634521484</real>
+	<integer>20</integer>
 	<key>speedVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorAlpha</key>
 	<real>1</real>
 	<key>startColorBlue</key>
@@ -87,21 +87,21 @@
 	<key>startColorRed</key>
 	<real>1</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceBlue</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceRed</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startParticleSize</key>
-	<real>12</real>
+	<integer>4</integer>
 	<key>startParticleSizeVariance</key>
-	<real>16.420000076293945</real>
+	<string>4</string>
 	<key>tangentialAccelVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>tangentialAcceleration</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>textureFileName</key>
 	<string>snow.png</string>
 </dict>
